--- a/scss/components/_comps.scss
+++ b/scss/components/_comps.scss
@@ -594,6 +594,7 @@
     .tier-total-container {
       position: absolute;
       right: 0;
+      top: -5px;
       min-width: 80px;
       text-align: center;
       font-size: 100px;
