--- a/templates/roll/partials/roll-collab-action.hbs
+++ b/templates/roll/partials/roll-collab-action.hbs
@@ -73,13 +73,13 @@
         </div>
         <div class="roll-sheet-sub-block roll-effects-block flex-horizontal">
           {{#each posRollMods.roll }}
-          {{#unless (test (test "!" isVisible) "||" (test isConditional "&&" (test "!" isActive)))}}
+          {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/unless}}
           {{/each}}
           <span class="roll-mod-block-spacer mid-spacer"></span>
           {{#each negRollMods.roll }}
-          {{#unless (test (test "!" isVisible) "||" (test isConditional "&&" (test "!" isActive)))}}
+          {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/unless}}
           {{/each}}
@@ -87,12 +87,12 @@
         {{#if hasInactiveConditionals.roll}}
         <div class="roll-sheet-sub-block roll-effects-block inactive-mod-block flex-horizontal">
           {{#each posRollMods.roll }}
-          {{#if (test (test isConditional "&&" (test "!" isActive)) "&&" isVisible)}}
+          {{#if (test isInInactiveBlock "&&" isVisible)}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/if}}
           {{/each}}
           {{#each negRollMods.roll }}
-          {{#if (test (test isConditional "&&" (test "!" isActive)) "&&" isVisible)}}
+          {{#if (test isInInactiveBlock "&&" isVisible)}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/if}}
           {{/each}}
@@ -113,13 +113,13 @@
         </div>
         <div class="roll-sheet-sub-block roll-effects-block flex-horizontal">
           {{#each posRollMods.position }}
-          {{#unless (test (test "!" isVisible) "||" (test isConditional "&&" (test "!" isActive)))}}
+          {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/unless}}
           {{/each}}
           <span class="roll-mod-block-spacer mid-spacer"></span>
           {{#each negRollMods.position }}
-          {{#unless (test (test "!" isVisible) "||" (test isConditional "&&" (test "!" isActive)))}}
+          {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/unless}}
           {{/each}}
@@ -127,12 +127,12 @@
         {{#if hasInactiveConditionals.position}}
         <div class="roll-sheet-sub-block roll-effects-block inactive-mod-block flex-horizontal">
           {{#each posRollMods.position }}
-          {{#if (test (test isConditional "&&" (test "!" isActive)) "&&" isVisible)}}
+          {{#if (test isInInactiveBlock "&&" isVisible)}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/if}}
           {{/each}}
           {{#each negRollMods.position }}
-          {{#if (test (test isConditional "&&" (test "!" isActive)) "&&" isVisible)}}
+          {{#if (test isInInactiveBlock "&&" isVisible)}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/if}}
           {{/each}}
@@ -160,13 +160,13 @@
         </div>
         <div class="roll-sheet-sub-block roll-effects-block flex-horizontal">
           {{#each posRollMods.effect }}
-          {{#unless (test (test "!" isVisible) "||" (test isConditional "&&" (test "!" isActive)))}}
+          {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/unless}}
           {{/each}}
           <span class="roll-mod-block-spacer mid-spacer"></span>
           {{#each negRollMods.effect }}
-          {{#unless (test (test "!" isVisible) "||" (test isConditional "&&" (test "!" isActive)))}}
+          {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/unless}}
           {{/each}}
@@ -174,12 +174,12 @@
         {{#if hasInactiveConditionals.effect}}
         <div class="roll-sheet-sub-block roll-effects-block inactive-mod-block flex-horizontal">
           {{#each posRollMods.effect }}
-          {{#if (test (test isConditional "&&" (test "!" isActive)) "&&" isVisible)}}
+          {{#if (test isInInactiveBlock "&&" isVisible)}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/if}}
           {{/each}}
           {{#each negRollMods.effect }}
-          {{#if (test (test isConditional "&&" (test "!" isActive)) "&&" isVisible)}}
+          {{#if (test isInInactiveBlock "&&" isVisible)}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/if}}
           {{/each}}
@@ -205,13 +205,13 @@
         </div>
         <div class="roll-sheet-sub-block roll-effects-block flex-horizontal">
           {{#each posRollMods.result }}
-          {{#unless (test (test "!" isVisible) "||" (test isConditional "&&" (test "!" isActive)))}}
+          {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/unless}}
           {{/each}}
           <span class="roll-mod-block-spacer mid-spacer"></span>
           {{#each negRollMods.result }}
-          {{#unless (test (test "!" isVisible) "||" (test isConditional "&&" (test "!" isActive)))}}
+          {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/unless}}
           {{/each}}
@@ -219,12 +219,12 @@
         {{#if hasInactiveConditionals.result}}
         <div class="roll-sheet-sub-block roll-effects-block inactive-mod-block flex-horizontal">
           {{#each posRollMods.result }}
-          {{#if (test (test isConditional "&&" (test "!" isActive)) "&&" isVisible)}}
+          {{#if (test isInInactiveBlock "&&" isVisible)}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/if}}
           {{/each}}
           {{#each negRollMods.result }}
-          {{#if (test (test isConditional "&&" (test "!" isActive)) "&&" isVisible)}}
+          {{#if (test isInInactiveBlock "&&" isVisible)}}
           {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/if}}
           {{/each}}
@@ -252,13 +252,13 @@
   {{#if isAffectingAfter}}
   <div class="roll-sheet-float-block roll-sheet-sub-block roll-effects-block flex-horizontal">
     {{#each posRollMods.after }}
-    {{#unless (test (test "!" isVisible) "||" (test isConditional "&&" (test "!" isActive)))}}
+    {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
     {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
     {{/unless}}
     {{/each}}
     <span class="roll-mod-block-spacer mid-spacer"></span>
     {{#each negRollMods.after }}
-    {{#unless (test (test "!" isVisible) "||" (test isConditional "&&" (test "!" isActive)))}}
+    {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
     {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
     {{/unless}}
     {{/each}}
@@ -266,12 +266,12 @@
   {{#if hasInactiveConditionals.after}}
   <div class="roll-sheet-sub-block roll-effects-block inactive-mod-block flex-horizontal">
     {{#each posRollMods.after }}
-    {{#if (test (test isConditional "&&" (test "!" isActive)) "&&" isVisible)}}
+    {{#if (test isInInactiveBlock "&&" isVisible)}}
     {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
     {{/if}}
     {{/each}}
     {{#each negRollMods.after }}
-    {{#if (test (test isConditional "&&" (test "!" isActive)) "&&" isVisible)}}
+    {{#if (test isInInactiveBlock "&&" isVisible)}}
     {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
     {{/if}}
     {{/each}}
