--- a/css/tinymce/content.css
+++ b/css/tinymce/content.css
@@ -112,15 +112,19 @@ html, :root {
     --blades-gold-bright-nums: 255, 231, 92;
     --blades-gold-nums: 255, 215, 0;
     --blades-gold-dark-nums: 184, 156, 0;
+    --blades-gold-darkest-nums: 55, 53, 0;
     --blades-red-bright-nums: 220, 20, 60;
     --blades-red-nums: 204, 0, 0;
     --blades-red-dark-nums: 122, 0, 0;
+    --blades-red-darkest-nums: 50, 0, 0;
     --blades-green-bright-nums: 20, 220, 60;
     --blades-green-nums: 0, 204, 0;
     --blades-green-dark-nums: 0, 122, 0;
+    --blades-green-darkest-nums: 0, 60, 0;
     --blades-cyan-bright-nums: 198, 255, 255;
     --blades-cyan-nums: 150, 255, 255;
     --blades-cyan-dark-nums: 42, 85, 85;
+    --blades-cyan-darkest-nums: 25, 49, 49;
     --blades-white-bright: rgba(var(--blades-white-bright-nums), 1);
     --blades-white: rgba(var(--blades-white-nums), 1);
     --blades-grey-bright: rgba(var(--blades-grey-bright-nums), 1);
@@ -131,15 +135,19 @@ html, :root {
     --blades-gold-bright: rgba(var(--blades-gold-bright-nums), 1);
     --blades-gold: rgba(var(--blades-gold-nums), 1);
     --blades-gold-dark: rgba(var(--blades-gold-dark-nums), 1);
+    --blades-gold-darkest: rgba(var(--blades-gold-darkest-nums), 1);
     --blades-red-bright: rgba(var(--blades-red-bright-nums), 1);
     --blades-red: rgba(var(--blades-red-nums), 1);
     --blades-red-dark: rgba(var(--blades-red-dark-nums), 1);
+    --blades-red-darkest: rgba(var(--blades-red-darkest-nums), 1);
     --blades-green-bright: rgba(var(--blades-green-bright-nums), 1);
     --blades-green: rgba(var(--blades-green-nums), 1);
     --blades-green-dark: rgba(var(--blades-green-dark-nums), 1);
+    --blades-green-darkest: rgba(var(--blades-green-darkest-nums), 1);
     --blades-cyan-bright: rgba(var(--blades-cyan-bright-nums), 1);
     --blades-cyan: rgba(var(--blades-cyan-nums), 1);
     --blades-cyan-dark: rgba(var(--blades-cyan-dark-nums), 1);
+    --blades-cyan-dark: rgba(var(--blades-cyan-darkest-nums), 1);
     --blades-white-fade: rgba(var(--blades-white-nums), 0.5);
     --blades-white-fade-strong: rgba(var(--blades-white-nums), 0.25);
     --blades-white-bright-fade: rgba(var(--blades-white-bright-nums), 0.5);
@@ -810,6 +818,7 @@ html, :root {
       html .comp.comp-tier .tier-total-container, :root .comp.comp-tier .tier-total-container {
         position: absolute;
         right: 0;
+        top: -5px;
         min-width: 80px;
         text-align: center;
         font-size: 100px;
@@ -1876,6 +1885,7 @@ html, :root {
         html .comp.comp-tier .tier-total-container, :root .comp.comp-tier .tier-total-container {
           position: absolute;
           right: 0;
+          top: -5px;
           min-width: 80px;
           text-align: center;
           font-size: 100px;
@@ -2410,10 +2420,12 @@ html, :root {
       text-shadow: 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark);
       width: 90%;
       margin: 0 auto;
-      border-bottom: 2px solid var(--blades-white);
-      margin-bottom: 5px; }
+      border-bottom: 2px solid var(--blades-white); }
+      html .tooltip > h1:last-of-type, :root .tooltip > h1:last-of-type {
+        margin-bottom: 5px; }
     html .tooltip > p, :root .tooltip > p {
-      margin: 0; }
+      margin: 0;
+      text-wrap: balance; }
     html .tooltip h2, :root .tooltip h2 {
       color: var(--blades-white-bright); }
     html .tooltip.tooltip-left, :root .tooltip.tooltip-left {
