--- a/scss/core/_globals.scss
+++ b/scss/core/_globals.scss
@@ -242,10 +242,14 @@
       width: 90%;
       margin: 0 auto;
       border-bottom: 2px solid var(--blades-white);
-      margin-bottom: 5px;
+
+      &:last-of-type { margin-bottom: 5px }
     }
 
-    > p { margin: 0 }
+    > p {
+      margin: 0;
+      text-wrap: balance;
+    }
 
     h2 {
       color: var(--blades-white-bright);
