--- a/css/style.css
+++ b/css/style.css
@@ -8891,22 +8891,16 @@ template {
     align-items: stretch;
     color: var(--blades-white);
     background: var(--blades-black-dark);
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-    max-width: 400px;
-    padding: 0.375rem;
+    width: auto;
+    padding: 0 0.3125rem;
     border: 0.0625rem solid var(--blades-grey);
     border-radius: 0.1875rem;
-    -webkit-hyphens: auto;
-    -ms-hyphens: auto;
-    hyphens: auto;
-    text-align: justify;
+    text-align: center;
     position: absolute;
     top: unset;
     left: -200px;
     bottom: 50px;
-    z-index: 6;
+    z-index: 12;
     pointer-events: none; }
     :root body.vtt.game.system-eunos-blades .app.window-app .tooltip > h1 {
       text-align: center;
@@ -8915,12 +8909,19 @@ template {
       text-shadow: 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark);
       width: 90%;
       margin: 0 auto;
-      border-bottom: 2px solid var(--blades-white); }
+      border-bottom: 2px solid var(--blades-white);
+      white-space: nowrap; }
       :root body.vtt.game.system-eunos-blades .app.window-app .tooltip > h1:last-of-type {
         margin-bottom: 5px; }
     :root body.vtt.game.system-eunos-blades .app.window-app .tooltip > p {
-      margin: 0;
+      margin: 5px 0;
       text-wrap: balance; }
+    :root body.vtt.game.system-eunos-blades .app.window-app .tooltip > ul, :root body.vtt.game.system-eunos-blades .app.window-app .tooltip ol {
+      margin: 5px 0;
+      text-align: left;
+      text-wrap: normal; }
+      :root body.vtt.game.system-eunos-blades .app.window-app .tooltip > ul li, :root body.vtt.game.system-eunos-blades .app.window-app .tooltip ol li {
+        text-wrap: normal; }
     :root body.vtt.game.system-eunos-blades .app.window-app .tooltip h2 {
       color: var(--blades-white-bright); }
     :root body.vtt.game.system-eunos-blades .app.window-app .tooltip.tooltip-left {
@@ -10074,22 +10075,16 @@ template {
           align-items: stretch;
           color: var(--blades-white);
           background: var(--blades-black-dark);
-          width: -webkit-max-content;
-          width: -moz-max-content;
-          width: max-content;
-          max-width: 400px;
-          padding: 0.375rem;
+          width: auto;
+          padding: 0 0.3125rem;
           border: 0.0625rem solid var(--blades-grey);
           border-radius: 0.1875rem;
-          -webkit-hyphens: auto;
-          -ms-hyphens: auto;
-          hyphens: auto;
-          text-align: justify;
+          text-align: center;
           position: absolute;
           top: unset;
           left: -200px;
           bottom: 50px;
-          z-index: 6;
+          z-index: 12;
           pointer-events: none; }
           :root body.vtt.game.system-eunos-blades .app.window-app.sheet .window-content form .tooltip > h1 {
             text-align: center;
@@ -10098,12 +10093,19 @@ template {
             text-shadow: 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark);
             width: 90%;
             margin: 0 auto;
-            border-bottom: 2px solid var(--blades-white); }
+            border-bottom: 2px solid var(--blades-white);
+            white-space: nowrap; }
             :root body.vtt.game.system-eunos-blades .app.window-app.sheet .window-content form .tooltip > h1:last-of-type {
               margin-bottom: 5px; }
           :root body.vtt.game.system-eunos-blades .app.window-app.sheet .window-content form .tooltip > p {
-            margin: 0;
+            margin: 5px 0;
             text-wrap: balance; }
+          :root body.vtt.game.system-eunos-blades .app.window-app.sheet .window-content form .tooltip > ul, :root body.vtt.game.system-eunos-blades .app.window-app.sheet .window-content form .tooltip ol {
+            margin: 5px 0;
+            text-align: left;
+            text-wrap: normal; }
+            :root body.vtt.game.system-eunos-blades .app.window-app.sheet .window-content form .tooltip > ul li, :root body.vtt.game.system-eunos-blades .app.window-app.sheet .window-content form .tooltip ol li {
+              text-wrap: normal; }
           :root body.vtt.game.system-eunos-blades .app.window-app.sheet .window-content form .tooltip h2 {
             color: var(--blades-white-bright); }
           :root body.vtt.game.system-eunos-blades .app.window-app.sheet .window-content form .tooltip.tooltip-left {
@@ -12484,7 +12486,9 @@ template {
         width: 100%;
         margin: 0;
         padding: 0 5px 5px 5px;
-        gap: 5px; }
+        gap: 5px;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
         :root body.vtt.game.system-eunos-blades .app.window-app.sheet.roll-collab .roll-sheet-sub-block.roll-effects-block > .roll-mod-block-spacer {
           display: -webkit-inline-box;
           display: -ms-inline-flexbox;
@@ -13469,7 +13473,7 @@ template {
             -webkit-box-direction: normal;
             -ms-flex-direction: column;
             flex-direction: column;
-            z-index: 1; }
+            z-index: 4; }
             :root body.vtt.game.system-eunos-blades .app.window-app.sheet.roll-collab .window-content form .sheet-root .split-root .split-root-right section.sheet-main {
               -webkit-box-flex: 1;
               -ms-flex-positive: 1;
