--- a/css/tinymce/content.css
+++ b/css/tinymce/content.css
@@ -2396,22 +2396,16 @@ html, :root {
     align-items: stretch;
     color: var(--blades-white);
     background: var(--blades-black-dark);
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-    max-width: 400px;
-    padding: 0.375rem;
+    width: auto;
+    padding: 0 0.3125rem;
     border: 0.0625rem solid var(--blades-grey);
     border-radius: 0.1875rem;
-    -webkit-hyphens: auto;
-    -ms-hyphens: auto;
-    hyphens: auto;
-    text-align: justify;
+    text-align: center;
     position: absolute;
     top: unset;
     left: -200px;
     bottom: 50px;
-    z-index: 6;
+    z-index: 12;
     pointer-events: none; }
     html .tooltip > h1, :root .tooltip > h1 {
       text-align: center;
@@ -2420,12 +2414,19 @@ html, :root {
       text-shadow: 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark);
       width: 90%;
       margin: 0 auto;
-      border-bottom: 2px solid var(--blades-white); }
+      border-bottom: 2px solid var(--blades-white);
+      white-space: nowrap; }
       html .tooltip > h1:last-of-type, :root .tooltip > h1:last-of-type {
         margin-bottom: 5px; }
     html .tooltip > p, :root .tooltip > p {
-      margin: 0;
+      margin: 5px 0;
       text-wrap: balance; }
+    html .tooltip > ul, html .tooltip ol, :root .tooltip > ul, :root .tooltip ol {
+      margin: 5px 0;
+      text-align: left;
+      text-wrap: normal; }
+      html .tooltip > ul li, html .tooltip ol li, :root .tooltip > ul li, :root .tooltip ol li {
+        text-wrap: normal; }
     html .tooltip h2, :root .tooltip h2 {
       color: var(--blades-white-bright); }
     html .tooltip.tooltip-left, :root .tooltip.tooltip-left {
