--- a/scss/sheets/_roll-collab-sheet.scss
+++ b/scss/sheets/_roll-collab-sheet.scss
@@ -116,6 +116,7 @@
       margin: 0;
       padding: 0 5px 5px 5px;
       gap: 5px;
+      flex-wrap: wrap;
 
       >.roll-mod-block-spacer {
         display: inline-flex;
@@ -1470,7 +1471,7 @@
             align-items: stretch;
             justify-content: stretch;
             flex-direction: column;
-            z-index: 1;
+            z-index: 4;
 
             section.sheet-main {
               flex-grow: 1;
